Implementing OnBoardingPage Composable to inflate onboarding UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Insta Lens</string>
+
+    <!-- Image Content Descriptions -->
+    <string name="onboarding_image_description">Onboarding Page Thumbnail</string>
 </resources>
