Implementing OnBooardingScreen Composable and setting up Pager data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- Image Content Descriptions -->
     <string name="onboarding_image_description">Onboarding Page Thumbnail</string>
+
+    <!-- On-Boarding -->
+    <string name="button_next">Next</string>
+    <string name="button_back">Back</string>
 </resources>
