Fixing Bug: HorizontalPager not updating with current page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!-- On-Boarding -->
     <string name="button_next">Next</string>
     <string name="button_back">Back</string>
+    <string name="button_get_started">Get Started</string>
 </resources>
