--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Image Content Descriptions -->
     <string name="onboarding_image_description">Onboarding Page Thumbnail</string>
     <string name="object_icon_description">Object Counter Icon</string>
+    <string name="capture_button_description">Capture Image Button</string>
 
     <!-- On-Boarding -->
     <string name="button_next">Next</string>
